Fix name element button

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <h1 class="profile__title">Жак-Ив Кусто</h1>
           <p class="profile__subtitle">Исследователь океана</p>
           <button class="button button_edit cursor">
-            <img src="./images/Vector.svg" alt="Изменить" class="button__image_edit">
+            <img src="./images/Vector.svg" alt="Изменить" class="button__image button__image_edit">
           </button>
         </div>
       </div>
       <button class="button button_add cursor">
-        <img src="./images/Plus.svg" alt="Добавить" class="button__image_add">
+        <img src="./images/Plus.svg" alt="Добавить" class="button__image button__image_add">
       </button> 
     </section>
     <section class="elements content" aria-label="Фото">
