--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
       </button>
     </section>
     <section class="elements content" aria-label="Фото">
-      <div class="element">
+      <template id="cardTemplate">
+        <div class="element">
+          <img class="element__photo">
+          <button aria-label="trash" class="element__delete cursor"></button>
+          <div class="element__name">
+            <h2 class="element__title"></h2>
+            <button aria-label="like" class="element__like"></button>
+          </div>
+        </div>
+      </template>
+      <!-- <div class="element">
         <img src="./images/Karachaevsk.png" alt="Карачаевск" class="element__photo">
         <div class="element__name">
           <h2 class="element__title">Карачаевск</h2>
@@ -71,7 +81,7 @@
           <h2 class="element__title">Карачаево-Черкессия</h2>
           <button aria-label="like" class="element__like"></button>
         </div>
-      </div>
+      </div> -->
     </section>
   </main>
   <footer class="footer content">
@@ -80,7 +90,7 @@
   <aside class="modal">
     <div class="modal__overlay">
       <div class="modal__form">
-        <button aria-label="close" class="modal__close cursor"><img src="./images/Close_Icon.svg" alt="Закрыть"></button>
+        <button aria-label="close" class="modal__close cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
         <h2 class="modal__title">Редактировать профиль</h2>
         <form class="modal__edit" action="#">
           <input class="modal__description modal__description_type_name" id="name" name="name" type="text">
@@ -91,6 +101,32 @@
       </div>
     </div>
   </aside>
+  <aside class="modal">
+    <div class="modal__overlay modal__overlay_add">
+      <div class="modal__form">
+        <button aria-label="close" class="modal__close modal__close_add cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
+        <h2 class="modal__title">Новое место</h2>
+        <form class="modal__add" action="#">
+          <input class="modal__description modal__description_type_heading" placeholder="Название" id="heading" name="heading" type="text">
+          <input class="modal__description modal__description_type_link" placeholder="Ссылка на картинку" id="link" name="link"
+            type="text">
+          <button aria-label="save" class="button button_submit cursor">Создать</button>
+        </form>
+      </div>
+    </div>
+  </aside>
+  <aside class="modal">
+    <div class="modal__overlay modal__overlay_img">
+      <div class="modal__form modal__form_img">
+        <button aria-label="close" class="modal__close modal__close_img cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
+        <div class="modal__wrapper">
+          <img class="modal__photo">
+        </div>
+        <h6 class="modal__title modal__title_img"></h6>
+        </form>
+      </div>
+    </div>
+  </aside>
   <script src="js/script.js"></script>
-</body>
+</body> 
 </html>
