--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="elements content" aria-label="Фото">
       <template id="cardTemplate">
         <div class="element">
-          <img class="element__photo">
+          <img class="element__photo cursor">
           <button aria-label="trash" class="element__delete cursor"></button>
           <div class="element__name">
             <h2 class="element__title"></h2>
@@ -119,9 +119,7 @@
     <div class="modal__overlay modal__overlay_img">
       <div class="modal__form modal__form_img">
         <button aria-label="close" class="modal__close modal__close_img cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
-        <div class="modal__wrapper">
-          <img class="modal__photo">
-        </div>
+        <img class="modal__photo">
         <h6 class="modal__title modal__title_img"></h6>
         </form>
       </div>
