Fixed after validator

--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@
     <div class="modal__overlay modal__overlay_img">
       <div class="modal__form modal__form_img">
         <button aria-label="close" class="modal__close modal__close_img cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
-        <img class="modal__photo">
+        <img src="#" alt="#" class="modal__photo">
         <h6 class="modal__title modal__title_img"></h6>
-        </form>
       </div>
     </div>
   </aside>
