Fixed after review

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
         <button aria-label="close" class="modal__close cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
         <h2 class="modal__title">Редактировать профиль</h2>
         <form class="modal__edit" action="#">
-          <input class="modal__description modal__description_type_name" id="name" name="name" type="text">
+          <input class="modal__description modal__description_type_name" id="name" name="name" type="text" placeholder="Ваше имя">
           <input class="modal__description modal__description_type_about-self" id="about-self" name="about-self"
-            type="text">
+            type="text" placeholder="Род занятий">
           <button aria-label="save" class="button button_submit cursor">Сохранить</button>
         </form>
       </div>
