--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
       <div class="modal__form">
         <button aria-label="close" class="modal__close cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
         <h2 class="modal__title">Редактировать профиль</h2>
-        <form class="modal__edit" action="#" novalidate>
-          <div>
+        <form class="modal__edit forms" action="#" novalidate>
+          <div class="modal__input">
             <input id="name-input" class="modal__description modal__description_type_name" name="name" type="text" placeholder="Ваше имя" required minlength="2" maxlength="40">
-            <span class="name-input-error modal__description-error">Текст не должен быть короче 2 симв. Длина текста сейчас: 1 символ.</span>
+            <span class="name-input-error modal__description-error"></span>
           </div>
-          <div>
+          <div class="modal__input">
             <input id="about-self" class="modal__description modal__description_type_about-self" id="about-self" name="about-self"
             type="text" placeholder="Род занятий" required minlength="2" maxlength="200">
-            <span class="about-self-error modal__description-error">Текст не должен быть короче 2 симв. Длина текста сейчас: 1 символ.</span>
+            <span class="about-self-error modal__description-error"></span>
           </div>
           <button aria-label="save" class="button button_submit cursor">Сохранить</button>
         </form>
@@ -71,15 +71,15 @@
       <div class="modal__form">
         <button aria-label="close" class="modal__close modal__close_add cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
         <h2 class="modal__title">Новое место</h2>
-        <form class="modal__add" action="#" novalidate>
-          <div>
-            <input id="heading-input" class="modal__description modal__description_type_heading" placeholder="Название" name="heading" type="text">
-            <span class="heading-input-error modal__description-error">Текст не должен быть короче 2 симв. Длина текста сейчас: 1 символ.</span>
+        <form class="modal__add forms" action="#" novalidate>
+          <div class="modal__input">
+            <input id="heading-input" class="modal__description modal__description_type_heading" placeholder="Название" name="heading" type="text" minlength="2" maxlength="30" required>
+            <span class="heading-input-error modal__description-error"></span>
           </div>
-          <div>
+          <div class="modal__input">
             <input id="link-input" class="modal__description modal__description_type_link" placeholder="Ссылка на картинку" name="link"
-            type="text">
-            <span class="link-input-error modal__description-error">Текст не должен быть короче 2 симв. Длина текста сейчас: 1 символ.</span> 
+            required type="URL">
+            <span class="link-input-error modal__description-error"></span> 
           </div>
           <button aria-label="save" class="button button_submit cursor">Создать</button>
         </form>
