project is ready

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       </div>
     </div>
   </aside>
-  <script src="js/script.js"></script>
+  <script src="./scripts/validate.js"></script>
+  <script src="./scripts/script.js"></script>
 </body> 
 </html>
