fixed problem validation

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span class="name-input-error modal__description-error"></span>
           </div>
           <div class="modal__input">
-            <input id="about-self" class="modal__description modal__description_type_about-self" id="about-self" name="about-self"
+            <input id="about-self" class="modal__description modal__description_type_about-self" name="about-self"
             type="text" placeholder="Род занятий" required minlength="2" maxlength="200">
             <span class="about-self-error modal__description-error"></span>
           </div>
