--- a/index.html
+++ b/index.html
@@ -95,7 +95,10 @@
       </div>
     </div>
   </aside>
-  <script src="./scripts/validate.js"></script>
-  <script src="./scripts/script.js"></script>
+  <script type = "module" src="./scripts/Card.js"></script>
+  <script type = "module" src="./scripts/FormValidator.js"></script>
+  <script type = "module" src="./scripts/ModalWindowAction.js"></script>
+  <!-- <script src="./scripts/validate.js"></script> -->
+  <script type = "module" src="./scripts/script.js"></script>
 </body> 
 </html>
