--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
   </aside>
   <script type = "module" src="./scripts/Card.js"></script>
   <script type = "module" src="./scripts/FormValidator.js"></script>
+  <script type = "module" src="./scripts/constants.js"></script>
   <script type = "module" src="./scripts/script.js"></script>
 </body> 
 </html>
