--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
       </div>
     </div>
   </aside>
+  <script type = "module" src="./scripts/Section.js"></script>
+  <script type = "module" src="./scripts/UserInfo.js"></script>
+  <script type = "module" src="./scripts/Popup.js"></script>
+  <script type = "module" src="./scripts/PopupWithImage.js"></script>
+  <script type = "module" src="./scripts/PopupWithForm.js"></script>
   <script type = "module" src="./scripts/Card.js"></script>
   <script type = "module" src="./scripts/FormValidator.js"></script>
   <script type = "module" src="./scripts/constants.js"></script>
