class Popup, PopapWichImage, Card are ready

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <p class="footer__copyright">&#169; 2020 Mesto Russia</p>
   </footer>
   <aside class="modal">
-    <div class="modal__overlay">
+    <div class="modal__overlay modal__overlay_profile">
       <div class="modal__form">
         <button aria-label="close" class="modal__close cursor"><img src="./images/Close_Icon.svg" alt="Закрыть" class="modal__image"></button>
         <h2 class="modal__title">Редактировать профиль</h2>
