--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <section class="profile content">
       <div class="profile__list">
         <div class="profile__image-wrapper">
-          <img src="" alt="Аватар" class="profile__image">
+          <img src=" " alt="Аватар" class="profile__image">
           <button aria-label="edit" class="button button_edit-avatar">
             <img src="<%=require('./images/Vector.svg')%>" alt="Изменить" class="button__image button__image_edit-avatar">
           </button>
@@ -124,7 +124,7 @@
         <h2 class="modal__title">Обновить аватар</h2>
         <form class="modal__add forms" action="#" novalidate>
           <div class="modal__input">
-            <input id="link-input" class="modal__description modal__description_type_link" placeholder="Ссылка на картинку" name="link"
+            <input id="link-input-avatar" class="modal__description modal__description_type_link" placeholder="Ссылка на картинку" name="link"
             required type="URL">
             <span class="link-input-error modal__description-error"></span> 
           </div>
